--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,16 @@
 spring.application.name=Api_Flutter
-spring.data.mongodb.uri=mongodb+srv://thinhphat_2404:Ngobo240404@cluster0.6xy0oke.mongodb.net/api-test-springboot
+spring.data.mongodb.uri=mongodb+srv://thinhphat_2404:Ngobo240404@cluster0.6xy0oke.mongodb.net/test1_v1?retryWrites=true&w=majority
+
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=ngothinhphat244@gmail.com
+spring.mail.password=sxym fjwg slxf wzgj
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+jwt.secret=hellowordjava
+ACCESS_TOKEN_SECRET=whoismybrother
+REFRESH_TOKEN_SECRET=takeusbacktoourbrother
