--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Api_Flutter
-spring.data.mongodb.uri=mongodb://localhost:27017/test
+spring.data.mongodb.uri=mongodb://localhost:27017/DBecomly?retryWrites=true&w=majority
 
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
