--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.application.name=Api_Flutter
-spring.data.mongodb.uri=mongodb+srv://thinhphat_2404:Ngobo240404@cluster0.6xy0oke.mongodb.net/test1_v1?retryWrites=true&w=majority
-
+#spring.data.mongodb.uri=mongodb+srv://thinhphat_2404:Ngobo240404@cluster0.6xy0oke.mongodb.net/test1_v1?retryWrites=true&w=majority
+#spring.data.mongodb.uri=mongodb+srv://thinhphat_2404:Ngobo240404@cluster0.6xy0oke.mongodb.net/DBecomly
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=Eproject4
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
 
@@ -11,6 +14,7 @@ spring.mail.password=sxym fjwg slxf wzgj
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-jwt.secret=hellowordjava
+server.port=3000
+jwt.secret=01234567890123456789/Eproject4/01234567890123456789
 ACCESS_TOKEN_SECRET=whoismybrother
 REFRESH_TOKEN_SECRET=takeusbacktoourbrother
