update config and folder structure

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,25 @@
 spring.application.name=Api_Flutter
-spring.data.mongodb.uri=mongodb://localhost:27017/ABCD?retryWrites=true&w=majority
+#spring.data.mongodb.uri=mongodb+srv://thinhphat_2404:Ngobo240404@cluster0.6xy0oke.mongodb.net/test_v1?retryWrites=true&w=majority
+#spring.data.mongodb.uri=mongodb+srv://thinhphat_2404:Ngobo240404@cluster0.6xy0oke.mongodb.net/DBecomly
+spring.data.mongodb.uri=mongodb://localhost:27017/DBecomly?retryWrites=true&w=majority
 
-spring.servlet.multipart.max-file-size=5MB
-spring.servlet.multipart.max-request-size=5MB
-#
-#spring.mail.host=smtp.gmail.com
-#spring.mail.port=587
-#spring.mail.username=ngothinhphat244@gmail.com
-#spring.mail.password=sxym fjwg slxf wzgj
-#spring.mail.properties.mail.smtp.auth=true
-#spring.mail.properties.mail.smtp.starttls.enable=true
-#
-#jwt.secret=hellowordjava
-#ACCESS_TOKEN_SECRET=whoismybrother
-#REFRESH_TOKEN_SECRET=takeusbacktoourbrother
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=150MB
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=ngothinhphat244@gmail.com
+spring.mail.password=sxym fjwg slxf wzgj
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Server Configuration
+server.port=3000
+server.address=192.168.1.8
+
+# Custom API URL
+api.url=/api/v1
+
+#JWT
+ACCESS_TOKEN_SECRET=01234567890123456789/Eproject4/01234567890123456789
+REFRESH_TOKEN_SECRET=01234567890123456789/Eproject4refresh/01234567890123456789
