update config and folder structure

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ server.port=3000
 server.address=192.168.1.8
 
 # Custom API URL
-api.url=/api/v1
+spring.data.rest.base-path=/api/v1
 
 #JWT
 ACCESS_TOKEN_SECRET=01234567890123456789/Eproject4/01234567890123456789
