Fix auth version end

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.application.name=Api_Flutter
-spring.data.mongodb.uri=mongodb+srv://thinhphat_2404:Ngobo240404@cluster0.6xy0oke.mongodb.net/test_v1?retryWrites=true&w=majority
+#spring.data.mongodb.uri=mongodb+srv://thinhphat_2404:Ngobo240404@cluster0.6xy0oke.mongodb.net/test_v1?retryWrites=true&w=majority
 #spring.data.mongodb.uri=mongodb+srv://thinhphat_2404:Ngobo240404@cluster0.6xy0oke.mongodb.net/DBecomly
-#spring.data.mongodb.uri=mongodb://localhost:27017/DBecomly?retryWrites=true&w=majority
+
+#Cai nay la database cua Dung
+spring.data.mongodb.uri=mongodb://localhost:27017/Eproject4
 
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=150MB
