--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,15 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.stripe</groupId>
+            <artifactId>stripe-java</artifactId>
+            <version>22.13.0</version>
+        </dependency>
+
     </dependencies>
+
 
 
     <build>
