Category service and upload image

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,8 @@ spring.data.mongodb.uri=mongodb://localhost:27017/Eproject4
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=150MB
 
+file.upload-dir=src/main/resources/static/images
+
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=ngothinhphat244@gmail.com
